src/objects/PANG_Data_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Generalizability_Comment__c</fullName>
        <label>Generalizability Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Generalizability__c</fullName>
        <inlineHelpText>Are the Data Generalizable to the Full Country Population of Interest?</inlineHelpText>
        <label>Generalizability</label>
        <picklist>
            <picklistValues>
                <fullName>Multiple Countries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Within Country</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HbA1C_Lab_Values_Comments__c</fullName>
        <label>HbA1C Lab Values Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HbA1C_Lab_Values__c</fullName>
        <label>HbA1C Lab Values?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Histology_Availability_Comment__c</fullName>
        <label>Histology Availability Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Histology_Available__c</fullName>
        <label>Histology Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_can_the_data_be_accessed_Comment__c</fullName>
        <label>How can the data be accessed Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_can_the_data_be_accessed__c</fullName>
        <label>How can the data be accessed</label>
        <picklist>
            <picklistValues>
                <fullName>Externally Accessible via Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Externally Hosted - Vendor Directly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Externally Hosted - Vendor via Data Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Hosted/Analyzed - Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - But all Analysis By Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_considerations_Notes__c</fullName>
        <label>Key considerations / Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lab_Coding_System_Comment__c</fullName>
        <label>Lab Coding System Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lab_Details_Comment__c</fullName>
        <label>Lab Details Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lab_Details__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Lab Details</label>
        <picklist>
            <picklistValues>
                <fullName>Serum Creatinine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albumin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKD Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Cholesterol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lab_Values_Available_Comment__c</fullName>
        <label>Lab Values Available Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lab_Values_Available__c</fullName>
        <label>Lab Values Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lilly_Internal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal Lilly Contact that has knowledge and familiarity with Data Asset</inlineHelpText>
        <label>Lilly Internal Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Data_Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linkable_Details_Comments__c</fullName>
        <label>Linkable Details Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Linkable_Details__c</fullName>
        <inlineHelpText>If Data is linked, select All that Apply</inlineHelpText>
        <label>Linkable Details</label>
        <picklist>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Reported Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thick Fund (EU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Measure_of_Continuous_Enrollment_Comment__c</fullName>
        <label>Measure of Continuous Enrollment Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Measure_of_Continuous_Enrollment__c</fullName>
        <label>Measure of Continuous Enrollment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mortality_Data_Available_Comments__c</fullName>
        <label>Mortality Data Available Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mortality_Data_Available__c</fullName>
        <label>Mortality Data Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Version</label>
        <referenceTo>PANG_Data_Asset__c</referenceTo>
        <relationshipLabel>Data Asset Version</relationshipLabel>
        <relationshipName>RWE_Data_Assets_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owned_or_Sourced_From_a_Third_Party_Comm__c</fullName>
        <label>Data Owned or Sourced Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owned_or_Sourced_From_a_Third_Party__c</fullName>
        <label>Data Owned or Sourced?</label>
        <picklist>
            <picklistValues>
                <fullName>Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourced from Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PANG_BMI_or_Height_Weight_Available__c</fullName>
        <label>BMI or Height/Weight Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PANG_BMI_or_Ht_Wt_Available_Comment__c</fullName>
        <label>BMI or Ht/Wt Available Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Patient_History_Comment__c</fullName>
        <label>Patient History Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_History__c</fullName>
        <label>Patient History</label>
        <picklist>
            <picklistValues>
                <fullName>Blood Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cause of Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xray/MRI, etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaccine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comorbidity Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chronic Disease Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genomic Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PharmacyRx_Data_Available__c</fullName>
        <label>Pharmacy/Rx Data Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Details_Comment__c</fullName>
        <label>Pharmacy Details Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Details__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Pharmacy Details</label>
        <picklist>
            <picklistValues>
                <fullName>Reason for Rx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days of Supply in Rx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Refills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drugs Consumed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metric Quantity and Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strength</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unique Product Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescriber Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason Switched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Glucose Monitoring Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pump Related Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Injection vs. Pump vs. IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orals vs. Injectibles vs. IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orals vs. Injectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Rx_Data_Available_Comment__c</fullName>
        <label>Pharmacy/Rx Data Available Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Type_Comment__c</fullName>
        <label>Pharmacy Type Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Type__c</fullName>
        <label>Pharmacy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prescription- In patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription- Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription - OTC / Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pre_Contract_Scientific_Assessment__c</fullName>
        <label>Pre-Contract Scientific Assessment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Contract_Technical_Assessment__c</fullName>
        <inlineHelpText>Raw Data</inlineHelpText>
        <label>Pre-Contract Technical Assessment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prescription_Coding_System_Comment__c</fullName>
        <label>Prescription Coding System Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prescription_Coding_System__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Prescription Coding System</label>
        <picklist>
            <picklistValues>
                <fullName>NDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multilix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Prescription_Date_Captured_Comments__c</fullName>
        <label>Prescription Date Captured Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prescription_Date_Captured__c</fullName>
        <label>Prescription Date Captured?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure_Coding_System_Comment__c</fullName>
        <label>Procedure Coding System Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Procedure_Coding_System__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Procedure Coding System</label>
        <picklist>
            <picklistValues>
                <fullName>ICD-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCPCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>READ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemotherapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>QOL_Efficacy_Perform_status_detail_Comme__c</fullName>
        <label>QOL/ Efficacy/ Perform Status Detail Com</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QOL_Efficacy_Perform_status_detail__c</fullName>
        <label>QOL/ Efficacy/ Perform status detail</label>
        <picklist>
            <picklistValues>
                <fullName>PHQ-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTSQs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IW-ADL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IW-SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ-5D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnofsky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Global Assessment (PGA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Surface Area (BSA) of Psorasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLEDAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>QOL_Perform_Status_measures_available_Co__c</fullName>
        <label>QOL/Perform Status measures avail Commen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QOL_Perform_Status_measures_available__c</fullName>
        <label>QOL/Perform Status measures available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RWE_Partnership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If acquired though a Partnership</inlineHelpText>
        <label>RWE Partnership</label>
        <referenceTo>PANG_Partnership__c</referenceTo>
        <relationshipLabel>Data Assets</relationshipLabel>
        <relationshipName>RWE_Data_Assets_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type_Comment__c</fullName>
        <label>Relationship Type Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>RWE Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Provider - Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Provider - Academic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Specify in Comments)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relevant_Lilly_Business_Unit_Comment__c</fullName>
        <label>Relevant Lilly Business Unit Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relevant_Lilly_Business_Unit__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Relevant Lilly Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biomedicines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Markets</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Setting_of_Care_Comment__c</fullName>
        <label>Setting of Care Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Setting_of_Care__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Setting of Care</label>
        <picklist>
            <picklistValues>
                <fullName>Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Emergency Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Home Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Specify in Comments)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Year_of_Available_Comment__c</fullName>
        <label>Start Year of Available Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Year_of_Available__c</fullName>
        <label>Start Year of Available</label>
        <picklist>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Of_Evaluation_Comments__c</fullName>
        <label>State Of Evaluation Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Of_Evaluation__c</fullName>
        <label>State Of Evaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Contract Scientific Assess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-contract Tech Assess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Contract Tech Eval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Time_Lag_Comment__c</fullName>
        <label>Time Lag Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Lag__c</fullName>
        <label>Time Lag</label>
        <picklist>
            <picklistValues>
                <fullName>Real Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-45 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grater than 12 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Database_Comments__c</fullName>
        <label>Type of Database Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Database__c</fullName>
        <label>Type of Database</label>
        <picklist>
            <picklistValues>
                <fullName>Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registry / Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Reported Outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THICK Fund (EU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <inlineHelpText>Lilly and Partner/Vendor</inlineHelpText>
        <label>Vendor Contact</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version_Comment__c</fullName>
        <label>Version Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_can_be_Accessed_Comment__c</fullName>
        <label>What can be Accessed Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_can_be_Accessed__c</fullName>
        <inlineHelpText>What can be Accessed?
(Entire data or Datacut)</inlineHelpText>
        <label>What can be Accessed?</label>
        <picklist>
            <picklistValues>
                <fullName>Entire Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RWE Data Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Asset_Status__c</columns>
        <columns>Relationship_Type__c</columns>
        <columns>Disease_State_Covered__c</columns>
        <columns>Lilly_Internal_Contact__c</columns>
        <columns>Version__c</columns>
        <columns>Version_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Data_Assets</fullName>
        <columns>Data_Asset_Vendor_Name__c</columns>
        <columns>NAME</columns>
        <columns>Disease_State_Covered__c</columns>
        <columns>Setting_of_Care__c</columns>
        <columns>PharmacyRx_Data_Available__c</columns>
        <columns>Cost_Data_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Asset_Vendor_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Data Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Data_Assets_EMR</fullName>
        <columns>Data_Asset_Vendor_Name__c</columns>
        <columns>NAME</columns>
        <columns>Disease_State_Covered__c</columns>
        <columns>Setting_of_Care__c</columns>
        <columns>PharmacyRx_Data_Available__c</columns>
        <columns>Cost_Data_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Asset_Vendor_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Data Assets - EMR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_By_Lee</fullName>
        <columns>NAME</columns>
        <columns>Data_Asset_Vendor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Lee Zheng</value>
        </filters>
        <label>Created By Lee</label>
        <language>en_US</language>
    </listViews>
</CustomObject>